# Emu-QEMU

./: CMakeLists.txt
android/: CMakeLists.txt
android-qemu2-glue/: main.cpp  qemu-setup.cpp
android/android-emu/: android-libui.cmake
android/android-emu-base/android/base/async/: AsyncSocketServer.cpp  AsyncSocketServer.h
android/android-emu-base/android/base/sockets/: SocketUtils.cpp  SocketUtils.h
android/android-emu-base/android/base/system/: System.cpp  system-native-mac.mm
android/android-emu/android/: adb-server.cpp  adb-server.h  qemu-setup.cpp
android/android-emu/android/avd/: info.c  info.h
android/android-emu/android/emulation/: AdbHostListener.cpp  AdbHostListener.h  AdbHostServer.cpp  AdbHostServer.h  QemuMiscPipe.cpp
android/android-emu/android/emulation/control/: window_agent.h
android/android-emu/android/skin/agent/: agent.cpp  agent.h  def.h  event.cpp  surface.cpp  version.h  window-agent-impl.cpp  winsys.cpp
android/android-emu/android/skin/qt/: mac-native-window.mm
android/emulator/: main-emulator.cpp
anvirt/: .clang-format  CMakeLists.txt
anvirt/include/anvirt_emu/: vmm.h  vmm_def.h
anvirt/include/anvirt_emu/base/: log.h
anvirt/include/anvirt_emu/emu/: msg.h
anvirt/include/anvirt_emu/ipc/: endpoint.h  msg.h
anvirt/include/anvirt_emu/service/: agent.h  anvs_api.h  msg.h  service.h
anvirt/ipc/: CMakeLists.txt  endpoint.c  msg.c
anvirt/log/: CMakeLists.txt  log.c
anvirt/qemu/: CMakeLists.txt  main.cpp
anvirt/service/: CMakeLists.txt  agent.c  api.c  service.c
util/: qemu-timer-common.c
(+4 files in other folders)
